--- a/action.yml
+++ b/action.yml
@@ -2,9 +2,6 @@ name: Run ESLint on changed files
 description: Run ESLint on JavaScript files
 author: stefanoeb
 inputs:
-  base-branch:
-    description: Base branch
-    required: true
   config-path:
     description: Eslint configuration path
     required: false
@@ -19,7 +16,6 @@ runs:
   args:
     - ${{ inputs.config-path }}
     - ${{ inputs.ignore-path }}
-    - ${{ inputs.base-branch }}
 branding: 
   icon: circle
-  color: purple
+  color: blue
