--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Run ESLint on changed files
 description: Run ESLint on JavaScript files
-author: stefanoeb
+author: jackton1
 inputs:
   config-path:
     description: Eslint configuration path
