--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,10 @@ inputs:
     description: Eslint extra arguments
     required: false
     default: ''
+  exclude-path:
+    description: String or list of files to exclude entirely
+    required: false
+    default: ''
 runs:
   using: 'docker'
   image: 'Dockerfile'
