--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,7 @@ runs:
     - ${{ inputs.ignore-path }}
     - ${{ inputs.extensions }}
     - ${{ inputs.extra-args }}
+    - ${{ inputs.exclude-path }}
 branding: 
   icon: check-square
   color: blue
