--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run eslint-changed-files
-        id: eslint-changed-files
-        uses: ./
+      - name: Run ESLint on changed files
+        if: github.event_name == 'pull_request'
+        uses: tj-actions/eslint-changed-files@v4
+        with:
+          config-path: "test-app/package.json"
+          extensions: "ts,tsx"
+          extra-args: "--max-warnings=0"
