--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         run: yarn
         working-directory: test-app
       - name: Run ESLint on changed files
-        uses: tj-actions/eslint-changed-files@v4
+        uses: ./
         with:
           config-path: "test-app/package.json"
           extensions: "ts,tsx"
