--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,14 +9,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: shellcheck
         uses: reviewdog/action-shellcheck@v1.5
+
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install dependencies
         run: yarn
         working-directory: test-app
+
       - name: Run ESLint on changed files
         uses: ./
         with:
