--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,4 +38,5 @@ jobs:
         with:
           config-path: "test-app/package.json"
           extensions: "ts,tsx"
+          exclude-path: "test-app/src/App.tsx"
           extra-args: "--max-warnings=0"
