--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,7 @@ jobs:
         with:
           config-path: "test-app/package.json"
           extensions: "ts,tsx"
-          exclude-path: "test-app/src/App.tsx"
+          exclude-path: |
+            test-app/src/App.tsx
+            test-app/src/index.tsx
           extra-args: "--max-warnings=0"
