--- a/.github/workflows/sync-release-version.yml
+++ b/.github/workflows/sync-release-version.yml
@@ -16,6 +16,10 @@ jobs:
           pattern: 'tj-actions/eslint-changed-files@'
           paths: |
             README.md
+      - name: Update CHANGELOG.md
+        run: |
+          sudo gem install github_changelog_generator 
+          github_changelog_generator -u ${{ github.repository_owner }} -p eslint-changed-files
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
