--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Run ESLint on changed files
+name: Run eslint on changed files
 description: Run ESLint on JavaScript files
 author: jackton1
 inputs:
