--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,44 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    "schedule:weekends"
   ],
-  "rebaseWhen": "behind-base-branch"
+  "enabled": true,
+  "prHourlyLimit": 10,
+  "prConcurrentLimit": 2,
+  "rebaseWhen": "behind-base-branch",
+  "addLabels": [
+    "dependencies"
+  ],
+  "assignees": [
+    "eshork"
+  ],
+  "assignAutomerge": true,
+  "dependencyDashboard": true,
+  "dependencyDashboardAutoclose": true,
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true
+  },
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true,
+      "addLabels": [
+        "automerge"
+      ],
+    },
+    {
+      "description": "docker images",
+      "matchLanguages": [
+        "docker"
+      ],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "rebaseWhen": "behind-base-branch",
+      "addLabels": [
+        "automerge"
+      ],
+      "automerge": true
+    },
+  ]
 }
