--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,14 @@ jobs:
           config-path: "test-app/package.json"
           extensions: "ts,tsx"
           extra-args: "--max-warnings=0"
+          
+      - name: Run ESLint on changed files with exclusion
+        uses: ./
+        with:
+          config-path: "test-app/package.json"
+          extensions: "ts,tsx"
+          extra-args: "--max-warnings=0"
+          exclude-path: |
+            App.tsx
+            reportWebVitals.ts
+
