--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Run ESLint on changed files
         uses: ./
         with:
-          config-path: "test-app/package.json"
+          config_path: "test-app/package.json"
           extensions: "ts,tsx"
-          extra-args: "--max-warnings=0"
+          extra_args: "--max-warnings=0"
