--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     required: true
     default: ${{ github.token }}
   ref:
-    description: 'The target branch of the pull request in a workflow run or the current branch to check for changes since the first commit.'
+    description: 'The target branch of the pull request or the current branch to run on changes since the first commit.'
     required: true
     default: ${{ github.base_ref }}
   config_path:
