--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
             reportWebVitals.ts
       
       - run: |
-          echo "${{ toJSON(github.context.payload) }}"
+          echo "${{ toJSON(github.context) }}"
 
       - name: Run ESLint on changed files with  single file exclusion with head_ref
         uses: ./
