--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,3 +57,11 @@ jobs:
           config_path: "test-app/package.json"
           extensions: "ts,tsx"
           extra_args: "--max-warnings=0"
+          
+      - name: Run ESLint on changed files with .eslintignore
+        uses: ./
+        with:
+          config_path: "test-app/package.json"
+          extensions: "ts,tsx"
+          extra_args: "--max-warnings=0"
+          ignore_path: "test-app/.eslintignore"
