--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,19 +33,13 @@ jobs:
         run: yarn
         working-directory: test-app
 
-      - name: Run ESLint on changed files with exclusion
+      - name: Run ESLint on all files
         uses: ./
         with:
           config_path: "test-app/package.json"
           extensions: "ts,tsx"
           extra_args: "--max-warnings=0"
-
-      - name: Run ESLint on changed files with exclusion single file
-        uses: ./
-        with:
-          config_path: "test-app/package.json"
-          extensions: "ts,tsx"
-          extra_args: "--max-warnings=0"
+          all_files: "true"
 
       - name: Run ESLint on changed files
         uses: ./
