--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: 'GITHUB_TOKEN or a repo scoped PAT'
     required: true
     default: ${{ github.token }}
-  all-files:
+  all_files:
     description: 'Run eslint on all matching files'
     required: false
   config_path:
@@ -28,6 +28,6 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-branding: 
+branding:
   icon: check-square
   color: white
