--- a/action.yml
+++ b/action.yml
@@ -29,23 +29,23 @@ runs:
   using: 'composite'
   steps:
     - run: |
-      bash $GITHUB_ACTION_PATH/entrypoint.sh
-    id: changed-files
-    shell: bash
-    env:
-      GITHUB_SERVER_URL: ${{ github.server_url }}
-      GITHUB_REPOSITORY: ${{ github.repository }}
-      GITHUB_BASE_REF: ${{ github.base_ref }}
-      GITHUB_HEAD_REF: ${{ github.head_ref }}
-      GITHUB_SHA: ${{ github.sha }}
-      # INPUT_<VARIABLE_NAME> is not available in Composite run steps
-      # https://github.community/t/input-variable-name-is-not-available-in-composite-run-steps/127611
-      INPUT_TOKEN: ${{ inputs.token }}
-      INPUT_ALL_FILES: ${{ inputs.all_files }}
-      INPUT_CONFIG_PATH: ${{ inputs.config_path }}
-      INPUT_IGNORE_PATH: ${{ inputs.ignore_path }}
-      INPUT_EXTENSIONS: ${{ inputs.extensions }}
-      INPUT_EXTRA_ARGS: ${{ inputs.extra_args }}
+        bash $GITHUB_ACTION_PATH/entrypoint.sh
+      id: eslint-changed-files
+      shell: bash
+      env:
+        GITHUB_SERVER_URL: ${{ github.server_url }}
+        GITHUB_REPOSITORY: ${{ github.repository }}
+        GITHUB_BASE_REF: ${{ github.base_ref }}
+        GITHUB_HEAD_REF: ${{ github.head_ref }}
+        GITHUB_SHA: ${{ github.sha }}
+        # INPUT_<VARIABLE_NAME> is not available in Composite run steps
+        # https://github.community/t/input-variable-name-is-not-available-in-composite-run-steps/127611
+        INPUT_TOKEN: ${{ inputs.token }}
+        INPUT_ALL_FILES: ${{ inputs.all_files }}
+        INPUT_CONFIG_PATH: ${{ inputs.config_path }}
+        INPUT_IGNORE_PATH: ${{ inputs.ignore_path }}
+        INPUT_EXTENSIONS: ${{ inputs.extensions }}
+        INPUT_EXTRA_ARGS: ${{ inputs.extra_args }}
 
 branding:
   icon: check-square
