--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,26 @@ on:
       - main
 
 jobs:
-  eslint:
+  shellcheck:
+    name: Run shellcheck
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2.4.0
+      - name: Checkout to branch
+        uses: actions/checkout@v2
 
       - name: shellcheck
         uses: reviewdog/action-shellcheck@v1.12
+  
+  eslint:
+    runs-on: ${{ matrix.platform }}
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [ubuntu-latest, windows-latest, macos-latest, macos-11, ubuntu-18.04, windows-2022, windows-2016]
+
+    steps:
+      - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v2.5.0
         with:
