Fixed bug with action (#364)
* Fixed bug with action

* Update action.yml

* Delete Dockerfile

* Update entrypoint.sh

* Update entrypoint.sh

* Update entrypoint.sh

* Update entrypoint.sh

* Update entrypoint.sh

* Update action.yml

--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - uses: reviewdog/action-setup@v1
+      with:
+        reviewdog_version: v0.13.0
     - run: |
         bash $GITHUB_ACTION_PATH/entrypoint.sh
       id: eslint-changed-files
