--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,14 @@ jobs:
           extra_args: "--max-warnings=0"
           all_files: "true"
 
+      - name: Run ESLint from a sub directory
+        uses: ./
+        with:
+          config_path: "test-app/package.json"
+          extensions: "ts,tsx"
+          extra_args: "--max-warnings=0"
+          path: "test-app"
+
       - name: Run ESLint on changed files
         uses: ./
         with:
