--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,16 +68,13 @@ jobs:
           extensions: "ts,tsx"
           extra_args: "--max-warnings=0"
           ignore_path: "test-app/.eslintignore"
-      
-      - uses: actions/checkout@v2
-        with:
-          path: "dir1"
+          
       
       - name: Run ESLint on changed files from a sub directory
         uses: ./
         with:
-          config_path: "test-app/package.json"
+          config_path: "package.json"
           extensions: "ts,tsx"
           extra_args: "--max-warnings=0"
-          path: "dir1"
+          path: "test-app"
       
