--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 14
           cache: yarn
+          cache-dependency-path: test-app/package-lock.json
 
       - name: Install dependencies
         run: yarn
