--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: Run eslint on changed files
-description: Run ESLint on JavaScript files
+name: Run ESLint on changed files
+description: Run ESLint on all changed files
 author: jackton1
 inputs:
   token:
