Removed deprecated inputs.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,9 @@ jobs:
         uses: ./
         with:
           config_path: "test-app/package.json"
-          extensions: "ts,tsx"
+          files: |
+            *.tsx?
+            **/*.tsx?
           extra_args: "--max-warnings=0"
           all_files: "true"
 
@@ -48,13 +50,17 @@ jobs:
         uses: ./
         with:
           config_path: "test-app/package.json"
-          extensions: "ts,tsx"
+          files: |
+            *.tsx?
+            **/*.tsx?
           extra_args: "--max-warnings=0"
 
       - name: Run ESLint on changed files with .eslintignore
         uses: ./
         with:
           config_path: "test-app/package.json"
-          extensions: "ts,tsx"
+          files: |
+            *.tsx?
+            **/*.tsx?
           extra_args: "--max-warnings=0"
           ignore_path: "test-app/.eslintignore"
