--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ runs:
       id: changed-files
       uses: tj-actions/changed-files@v14.3
       with:
-        files: format('{0}\n{1}', inputs.files, join(steps.eslint-ignore-files.outputs.ignored_files, '\n'))
+        files: ${{ format('{0}\n{1}', inputs.files, join(steps.eslint-ignore-files.outputs.ignored_files, '\n')) }}
     - run: |
         bash $GITHUB_ACTION_PATH/entrypoint.sh
       id: eslint-changed-files
