--- a/action.yml
+++ b/action.yml
@@ -35,8 +35,8 @@ runs:
     - uses: reviewdog/action-setup@v1
       with:
         reviewdog_version: v0.13.1
-    - name: Process ignored files
-      id: eslint-ignore-files
+    - name: Process files
+      id: eslint-files
       run: |
         IGNORED_FILES=()
         if [[ -n $INPUT_IGNORE_PATH ]]; then
@@ -47,17 +47,23 @@ runs:
             done <"$file"
           done
         fi
-        echo "::set-output name=ignored_files::$IGNORED_FILES"
+        
+        IFS=$'\n' read -r -d '' -a FILES <<< "$INPUT_FILES"
+        
+        ALL_FILES=("${FILES[@]}" "${IGNORED_FILES[@]}")
+        
+        echo "::set-output name=all_files::$ALL_FILES"
       shell: bash
       env:
         # INPUT_<VARIABLE_NAME> is not available in Composite run steps
         # https://github.community/t/input-variable-name-is-not-available-in-composite-run-steps/127611
         INPUT_IGNORE_PATH: ${{ inputs.ignore_path }}
+        INPUT_FILES: ${{ inputs.files }}
     - name: Get changed files
       id: changed-files
       uses: tj-actions/changed-files@v14.3
       with:
-        files: ${{ format('{0}\n{1}', inputs.files, join(steps.eslint-ignore-files.outputs.ignored_files, '/n')) }}
+        files: ${{ steps.eslint-files.outputs.all_files }}
     - run: |
         bash $GITHUB_ACTION_PATH/entrypoint.sh
       id: eslint-changed-files
