--- a/action.yml
+++ b/action.yml
@@ -35,24 +35,10 @@ runs:
     - uses: reviewdog/action-setup@v1
       with:
         reviewdog_version: v0.13.1
-    - name: Process files
-      id: eslint-files
+    - name: Get source files
+      id: eslint-sourcefiles
       run: |
-        IGNORED_FILES=()
-        if [[ -n $INPUT_IGNORE_PATH ]]; then
-          for file in $INPUT_IGNORE_PATH
-          do
-            while read -r fileName; do
-              IGNORED_FILES+=("!$fileName")
-            done <"$file"
-          done
-        fi
-        
-        IFS=$'\n' read -r -d '' -a FILES <<< "$INPUT_FILES"
-        
-        ALL_FILES=("${FILES[@]}" "${IGNORED_FILES[@]}")
-        
-        echo "::set-output name=all_files::$ALL_FILES"
+        bash $GITHUB_ACTION_PATH/sourcefiles.sh
       shell: bash
       env:
         # INPUT_<VARIABLE_NAME> is not available in Composite run steps
@@ -63,7 +49,7 @@ runs:
       id: changed-files
       uses: tj-actions/changed-files@v14.3
       with:
-        files: ${{ steps.eslint-files.outputs.all_files }}
+        files: ${{ steps.eslint-sourcefiles.outputs.all_files }}
     - run: |
         bash $GITHUB_ACTION_PATH/entrypoint.sh
       id: eslint-changed-files
