--- a/action.yml
+++ b/action.yml
@@ -50,7 +50,7 @@ runs:
       id: changed-files
       uses: tj-actions/changed-files@v14.3
       with:
-        files: ${{ steps.eslint-sourcefiles.outputs.all_files }}
+        files: ${{ join(steps.eslint-sourcefiles.outputs.all_files, '\n') }}
     - name: Run eslint on changed files
       run: |
         # Run eslint on changed files
