--- a/action.yml
+++ b/action.yml
@@ -48,9 +48,10 @@ runs:
         INPUT_FILES: ${{ inputs.files }}
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@v14.3
+      uses: tj-actions/changed-files@v14.4
       with:
-        files: ${{ join(steps.eslint-sourcefiles.outputs.all_files, '\n') }}
+        files: ${{ steps.eslint-sourcefiles.outputs.all_files }}
+        files-separator: " "
     - name: Run eslint on changed files
       run: |
         # Run eslint on changed files
