--- a/action.yml
+++ b/action.yml
@@ -21,10 +21,10 @@ inputs:
     description: List of file extensions to watch for changes and run eslint
     required: false
     default: |
-      *.tsx?
-      **/*.tsx?
-      *.jsx?
-      **/*.jsx?
+      '*.tsx?'
+      '**/*.tsx?'
+      '*.jsx?'
+      '**/*.jsx?'
   extra_args:
     description: Eslint extra arguments
     required: false
