--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,8 +41,10 @@ jobs:
         with:
           config_path: "test-app/package.json"
           file_extensions: |
-            '*.tsx?'
-            '**/*.tsx?'
+            *.ts
+            *.tsx
+            **/*.ts
+            **/*.tsx
           extra_args: "--max-warnings=0"
           all_files: "true"
 
@@ -51,8 +53,10 @@ jobs:
         with:
           config_path: "test-app/package.json"
           file_extensions: |
-            '*.tsx?'
-            '**/*.tsx?'
+            *.ts
+            *.tsx
+            **/*.ts
+            **/*.tsx
           extra_args: "--max-warnings=0"
 
       - name: Run ESLint on changed files with .eslintignore
@@ -60,7 +64,9 @@ jobs:
         with:
           config_path: "test-app/package.json"
           file_extensions: |
-            '*.tsx?'
-            '**/*.tsx?'
+            *.ts
+            *.tsx
+            **/*.ts
+            **/*.tsx
           extra_args: "--max-warnings=0"
           ignore_path: "test-app/.eslintignore"
