--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,25 +36,42 @@ jobs:
         run: yarn
         working-directory: test-app
 
-      - name: Run ESLint on all files
+      - name: Run ESLint on changed files with .eslintignore
         uses: ./
         with:
           config_path: "test-app/package.json"
-          extensions: "ts,tsx"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
+          extra_args: "--max-warnings=0"
+          ignore_path: "test-app/.eslintignore"
+
+      - name: Run ESLint on all files with .eslintignore
+        uses: ./
+        with:
+          config_path: "test-app/package.json"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
           extra_args: "--max-warnings=0"
           all_files: "true"
+          ignore_path: "test-app/.eslintignore"
 
       - name: Run ESLint on changed files
         uses: ./
         with:
           config_path: "test-app/package.json"
-          extensions: "ts,tsx"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
           extra_args: "--max-warnings=0"
 
-      - name: Run ESLint on changed files with .eslintignore
+      - name: Run ESLint on all files
         uses: ./
         with:
           config_path: "test-app/package.json"
-          extensions: "ts,tsx"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
           extra_args: "--max-warnings=0"
-          ignore_path: "test-app/.eslintignore"
+          all_files: "true"
