--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,4 +74,4 @@ jobs:
             **/*.ts
             **/*.tsx
           extra_args: "--max-warnings=0"
-          all_files: "true"
+          all_files: true
