--- a/action.yml
+++ b/action.yml
@@ -37,10 +37,14 @@ inputs:
     required: false
     default: 'github-pr-review'
   filter_mode:
-    description: |
-      Filtering mode for the reviewdog command [added, diff_context, file, nofilter].
+    description: Filtering mode for the reviewdog command [added, diff_context, file, nofilter].
     required: false
     default: 'added'
+  skip_annotations:
+    description: Skip applying reviewdog check annotations.
+    required: false
+    default: 'false'
+
 runs:
   using: 'composite'
   steps:
@@ -82,6 +86,7 @@ runs:
         INPUT_EXTRA_ARGS: ${{ inputs.extra_args }}
         INPUT_FILTER_MODE: ${{ inputs.filter_mode }}
         INPUT_REPORTER: ${{ inputs.reporter }}
+        INPUT_SKIP_ANNOTATIONS: ${{ inputs.skip_annotations }}
 
 branding:
   icon: check-square
